Split home and login into seperate activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".LoginActivity">
+        </activity>
+
         <service
             android:name="com.oddhov.facebookcalendarsync.authenticator.AuthenticatorService">
             <intent-filter>
