Settings added, along with preferences feature, which is used in SyncAdapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">>
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,6 +35,11 @@
 
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".SettingsActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
         </activity>
 
         <service android:name=".authenticator.AuthenticatorService">
