Added Fabric Crashlytics

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,11 @@
                 android:name="android.content.SyncAdapter"
                 android:resource="@xml/syncadapter" />
         </service>
+
+          <!-- Fabric -->
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="2e60f15a13b7a184d83b4da13cf49042ab6ea650" />
     </application>
 
 </manifest>
