--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,8 @@ dependencies {
     compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
         transitive = true;
     }
+    compile('com.mikepenz:materialdrawer:5.9.0@aar') {
+        transitive = true
+    }
     testCompile 'junit:junit:4.12'
 }
