--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,13 @@ dependencies {
 
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
+    compile 'io.reactivex:rxjava:1.1.6'
+
+    // OkHttp & Retrofit
+    compile "com.squareup.okhttp3:logging-interceptor:3.8.0"
+    compile "com.squareup.retrofit2:retrofit:2.3.0"
+    compile "com.squareup.retrofit2:converter-gson:2.3.0"
+
     testCompile 'junit:junit:4.12'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
