--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,20 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'realm-android'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.oddhov.facebookcalendarsync"
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,31 +30,63 @@ android {
     }
 }
 
+final DAGGER_VERSION = '2.11'
+final LEAK_CANARY_VERSION = '1.5.4'
+final ANKO_VERSION = '0.10.1'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.android.support:design:24.2.1'
+    implementation "com.android.support:appcompat-v7:${project.appCompatVersion}"
+    compile 'com.facebook.android:facebook-android-sdk:4.29.0'
+    compile 'com.google.code.gson:gson:2.8.1'
+    implementation "com.android.support:support-v4:${project.appCompatVersion}"
+    compile "com.android.support:design:${project.appCompatVersion}"
     compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
         transitive = true;
     }
     compile('com.mikepenz:materialdrawer:5.9.0@aar') {
         transitive = true
     }
-    compile "com.jakewharton:butterknife:8.5.1"
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    // To be removed
+    compile "com.jakewharton:butterknife:8.8.1"
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile "com.google.dagger:dagger:2.9"
-    annotationProcessor "com.google.dagger:dagger-compiler:2.9"
-    provided 'javax.annotation:jsr250-api:1.0'
 
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    // Dagger
+    implementation "com.google.dagger:dagger:${DAGGER_VERSION}"
+    implementation "com.google.dagger:dagger-android:${DAGGER_VERSION}"
+    implementation "com.google.dagger:dagger-android-support:${DAGGER_VERSION}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
+    kapt "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
+    kapt "com.google.dagger:dagger-android-processor:${DAGGER_VERSION}"
 
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    // Anko
+    implementation "org.jetbrains.anko:anko-commons:${ANKO_VERSION}"
+    implementation "org.jetbrains.anko:anko-design:${ANKO_VERSION}"
+    implementation "org.jetbrains.anko:anko-sdk15-listeners:${ANKO_VERSION}"
+    implementation "org.jetbrains.anko:anko-sdk15:${ANKO_VERSION}"
 
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+
+    // RxJava
+    implementation "io.reactivex.rxjava2:rxjava:${project.rxjava2Version}"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    // RxPermissions
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    // Leak Canary
+    debugCompile "com.squareup.leakcanary:leakcanary-android:${LEAK_CANARY_VERSION}"
+    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
+
+    //Misc
+    implementation 'com.jakewharton.timber:timber:4.5.1'
+
+    // Tests
+    testImplementation "junit:junit:${project.junitVersion}"
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
