--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
+    ext.kotlin_version = '1.2.0'
+    ext.compileSdkVersion = '26'
+    ext.minSdkVersion = '21'
+    ext.targetSdkVersion = '26'
+    ext.appCompatVersion = '26.1.0'
+    ext.junitVersion = '4.12'
+    ext.mockitoVersion = '2.11.0'
+    ext.rxjava2Version = '2.1.5'
+
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
-        classpath "io.realm:realm-gradle-plugin:3.0.0"
         classpath 'io.fabric.tools:gradle:1.21.7'
-
+        classpath 'io.realm:realm-gradle-plugin:3.7.2'
+        classpath 'com.android.tools.build:gradle:3.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +29,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
+        google()
     }
 }
 
