--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="com.oddhov.facebookcalendarsyncredone.app.FacebookCalendarSyncApplication"
+        android:name="com.oddhov.facebookcalendarsyncredone.app.view.FacebookCalendarSyncApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
